--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>bt-common</module>
         <module>bt-production</module>
+        <module>bt-api</module>
     </modules>
     <packaging>pom</packaging>
     <modelVersion>4.0.0</modelVersion>
@@ -96,21 +97,21 @@
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.flywaydb</groupId>
-                <artifactId>flyway-core</artifactId>
-                <version>${flywaydb.version}</version>
-            </dependency>
+            <!--            <dependency>-->
+            <!--                <groupId>org.flywaydb</groupId>-->
+            <!--                <artifactId>flyway-core</artifactId>-->
+            <!--                <version>${flywaydb.version}</version>-->
+            <!--            </dependency>-->
             <dependency>
                 <groupId>org.mybatis</groupId>
                 <artifactId>mybatis</artifactId>
                 <version>${mybatis.version}</version>
             </dependency>
-            <dependency>
-                <groupId>io.minio</groupId>
-                <artifactId>minio</artifactId>
-                <version>${minio.version}</version>
-            </dependency>
+            <!--            <dependency>-->
+            <!--                <groupId>io.minio</groupId>-->
+            <!--                <artifactId>minio</artifactId>-->
+            <!--                <version>${minio.version}</version>-->
+            <!--            </dependency>-->
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
@@ -123,11 +124,6 @@
                 <version>${swagger.version}</version>
             </dependency>
 
-<!--            <dependency>-->
-<!--                <groupId>org.springframework.cloud</groupId>-->
-<!--                <artifactId>spring-cloud-starter-bootstrap</artifactId>-->
-<!--                <version>${bootstrap.version}</version>-->
-<!--            </dependency>-->
         </dependencies>
     </dependencyManagement>
 
