--- a/bt-api/pom.xml
+++ b/bt-api/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>bt-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
