--- a/bt-production/src/main/resources/application.yml
+++ b/bt-production/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   dataSource:
     druid:
-      url: jdbc:mysql://192.168.31.253:3306/business_terminal_erp?characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&allowMultiQueries=true&useSSL=false
+      url: jdbc:mysql://10.8.0.1:21306/business_terminal_erp?characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&allowMultiQueries=true&useSSL=false
       driverClassName: com.mysql.cj.jdbc.Driver
       username: root
       password: 1qazWSX
@@ -9,6 +9,7 @@ spring:
     sentinel:
       transport:
         dashboard: 10.8.0.1:20501
+        port: 20502
 
 mybatis-plus:
   mapper-locations: classpath*:mapper/*.xml
