feat(拆分): 拆分模块
拆分product和supplier模块

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>bt-common</module>
         <module>bt-production</module>
+        <module>bt-supplier</module>
         <module>bt-api</module>
         <module>bt-gateway</module>
         <module>bt-user</module>
