--- a/bt-supplier/pom.xml
+++ b/bt-supplier/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.rjavey</groupId>
@@ -8,9 +8,9 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>bt-production</artifactId>
+    <artifactId>bt-supplier</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>bt-production</name>
+    <name>bt-supplier</name>
     <description>Bt Production Code For interface.com.bt.production.Application</description>
 
 
@@ -18,12 +18,6 @@
         <dependency>
             <groupId>com.rjavey</groupId>
             <artifactId>bt-common</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.rjavey</groupId>
-            <artifactId>bt-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
