--- a/bt-supplier/pom.xml
+++ b/bt-supplier/pom.xml
@@ -22,6 +22,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.rjavey</groupId>
+            <artifactId>bt-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
