--- a/bt-supplier/src/main/resources/bootstrap.yml
+++ b/bt-supplier/src/main/resources/bootstrap.yml
@@ -13,7 +13,7 @@ spring:
         namespace: 2807b372-2965-4f41-80bb-3f73f6908f2a
         file-extension: yaml
         shared-configs:
-          - dataId: shared-swagger.yaml
+          - dataId: supplier-swagger.yaml
       discovery:
         server-addr: ${nacos-server-addr}
         group: DEFAULT_GROUP
