--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <swagger.version>3.0.0</swagger.version>
         <mybatis-plus.version>3.5.4.1</mybatis-plus.version>
         <mybatis.version>3.5.7</mybatis.version>
-        <druid.version>1.2.18</druid.version>
+        <druid.version>1.2.20</druid.version>
         <gson.version>2.8.6</gson.version>
         <ttl.version>2.2.0</ttl.version>
         <guava.version>31.0-jre</guava.version>
@@ -106,11 +106,11 @@
             <!--                <artifactId>flyway-core</artifactId>-->
             <!--                <version>${flywaydb.version}</version>-->
             <!--            </dependency>-->
-            <dependency>
-                <groupId>org.mybatis</groupId>
-                <artifactId>mybatis</artifactId>
-                <version>${mybatis.version}</version>
-            </dependency>
+            <!--            <dependency>-->
+            <!--                <groupId>org.mybatis</groupId>-->
+            <!--                <artifactId>mybatis</artifactId>-->
+            <!--                <version>${mybatis.version}</version>-->
+            <!--            </dependency>-->
             <!--            <dependency>-->
             <!--                <groupId>io.minio</groupId>-->
             <!--                <artifactId>minio</artifactId>-->
