feat(拆分): 拆分模块 seat测试

--- a/bt-supplier/src/main/resources/bootstrap.yml
+++ b/bt-supplier/src/main/resources/bootstrap.yml
@@ -14,6 +14,7 @@ spring:
         file-extension: yaml
         shared-configs:
           - dataId: supplier-swagger.yaml
+          - dataId: shared-seata.yaml
       discovery:
         server-addr: ${nacos-server-addr}
         group: DEFAULT_GROUP
