--- a/bt-common/pom.xml
+++ b/bt-common/pom.xml
@@ -64,6 +64,13 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+            <version>${rocketmq-springboot-version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
