--- a/bt-user/src/main/resources/bootstrap.yml
+++ b/bt-user/src/main/resources/bootstrap.yml
@@ -10,10 +10,11 @@ spring:
       server-addr: ${nacos-server-addr}
       config:
         group: DEFAULT_GROUP
-        namespace: 2807b372-2965-4f41-80bb-3f73f6908f2a
+        namespace: 900930bf-a1c9-4d4b-8b98-fd40d9e05197
         file-extension: yaml
         shared-configs:
-          - dataId: shared-swagger.yaml
+          #          - dataId: shared-swagger.yaml
+          - dataId: shared-rocketmq.yaml
       discovery:
         server-addr: ${nacos-server-addr}
         group: DEFAULT_GROUP
